--- a/index.html
+++ b/index.html
@@ -4,11 +4,15 @@
     <head>
         <meta charset="utf-8">
         <title>Recipes for food lovers!</title>
+        <link rel="stylesheet" href="style.css">
     </head>
 
     <body>
         <h1>Odin Recipes</h1>
+     <figure class="container-img">
         <img src="recipes.jpg">
+     </figure>
+        </body>
         <ul>
         <li><a href="salmon.html">Honey Garlic Salmon</a></li>
         <li><a href="ramen.html">Chicken Ramen</a></li>
