--- a/meatballs.html
+++ b/meatballs.html
@@ -4,11 +4,14 @@
     <head>
         <meta charset="utf-8">
         <title>Meatballs with creamy mushrooms & mash</title>
+        <link rel="stylesheet" href="meatballs.css">
     </head>
 
     <body>
         <h1>Meatballs with creamy mushrooms & mash</h1>
+        <figure class="container-img">
         <img src="meatballs.jpg">
+        </figure>
         <h2>Description</h2>
         <p>This homemade dish will make you feel at home. The creamy mushrooms in combination with the juicy sauce is to die for, alongside the green vegetables to give your meal a special touch of healthness!</p>
 
@@ -37,6 +40,6 @@
             <li>Cook the peas or green beans in a pan of boiling water for a few minutes until tender. Drain and leave to steam-dry. Stir the meatballs through the sauce and cook for 1-2 mins until hot and cooked through, then season. If you want to make the meatballs ahead, leave to cool. Will keep chilled for up to a day. Reheat thoroughly. Serve alongside the mash and veg.</li>    
         </ol>
 
-        <a href="index.html">Home</a>
+        <a class="back" href="index.html">Home</a>
     </body>
 </html>
