--- a/ramen.html
+++ b/ramen.html
@@ -4,11 +4,14 @@
     <head>
         <meta charset="utf-8">
         <title>Chicken Ramen</title>
+        <link rel="stylesheet" href="ramen.css">
     </head>
 
     <body>
         <h1>Chicken Ramen</h1>
+        <figure class="container-img">
         <img src="ramen.jpg">
+        </figure>
         <h2>Description</h2>
         <p>This amazing Chicken Ramen was inspired by the traditional Japanese Ramen but with one difference:it's easier and faster to make. This dish is a mix of lots of noodles, roasted chicken, vegetables and soft eggs. I'm sure you will fall in love!</p>
         <h2>Ingredientes</h2>
@@ -55,6 +58,6 @@
             <li>Cook for 2-3 minutes, until soft, then divide the noodles into two large bowls. Add the sliced chicken and the ramen broth. Top with the fresh scallions, jalapeño, and the soft boiled egg. Serve immediately. Enjoy!!</li>
         </ol>
 
-        <a href="index.html">Home</a>
+        <a class="back" href="index.html">Home</a>
     </body>
 </html>
