--- a/salmon.html
+++ b/salmon.html
@@ -4,11 +4,14 @@
     <head>
         <meta charset="utf-8">
         <title>Honey Garlic Salmon</title>
+        <link rel="stylesheet" href="salmon.css">
     </head>
 
     <body>
         <h1>Honey Garlic Salmon</h1>
+        <figure class="container-img">
         <img src="salmon.jpg">
+        </figure>
         <h2>Description</h2>
         <p>This Honey Garlic Salmon is a delicious and easy dish to prepare. The combination of the honey's sweetness 
         and the savory of the Salmon with lemon and garlic will lead you to an amazing gastronomic journey! Are you ready?</p>
@@ -36,6 +39,6 @@
                 <li>To serve, drizzle with the sauce and a squeeze of lemon juice. Serve with steamed vegetables; over rice or with a salad.
                 </li>
             </ol>
-        <a href="index.html">Home</a>
+        <a class="back" href="index.html">Home</a>
     </body>
 </html>
